profilelist1exp/unpackaged/objects/Approver__c.object
<CustomObject>
    <fields>
        <fullName>Action_View_Field__c</fullName>
        <formula>IF( AND( Approver__r.Id == $User.Id, ISPICKVAL(Approver_Status__c, &apos;Submitted&apos;), NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Closed as Rejected&apos;))),&apos;To Approve&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action View Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approval Request Resent to Approver</fullName>
                </value>
                <value>
                    <fullName>Approval Request Submitted to Approver</fullName>
                    <default>true</default>
                    <label>Approval Request Submitted to Approver</label>
                </value>
                <value>
                    <fullName>Approver Approved</fullName>
                </value>
                <value>
                    <fullName>Approver Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approver Reassigned</fullName>
                </value>
                <value>
                    <fullName>Approver Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Available__c</fullName>
        <formula>IF( 
AND( 
Approver__r.Id == $User.Id, 
ISPICKVAL(Approver_Status__c, &apos;Submitted&apos;), 
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Closed as Rejected&apos;)) 
), 
HYPERLINK(&apos;/apex/ApprovalRequestApprove?approverId=&apos; &amp; Id , &apos;Approve/Reject&apos;, &apos;_parent&apos;) &amp; &apos; &apos;, 
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actual_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Request_Status__c</fullName>
        <description>SOM R15.10 CR10016 - Hidden field to capture Approval Status in Services Governance Approval Request.</description>
        <formula>TEXT( Approval_Request__r.Approval_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Request_Type__c</fullName>
        <formula>TEXT(Approval_Request__r.Approval_Request_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <label>Approval Request Id</label>
        <referenceTo>Approval_Request__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Responsibilty__c</fullName>
        <label>Approval Responsibilty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Country Leader/GM</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Solution Design</fullName>
                </value>
                <value>
                    <fullName>Technical Services Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_End_Time__c</fullName>
        <description>SOM R15.10 CR10016 - Hidden field. Value populate by workflow</description>
        <label>Approver End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Initiation_Date__c</fullName>
        <label>Approver Initiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Manager_Email__c</fullName>
        <description>SOM R15.10 CR10015 - Hidden field. Value populate by workflow</description>
        <label>Approver Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_Request_Age_in_Days__c</fullName>
        <description>SOM R15.10 CR10016 - To display the differences between Approver Start Time and Approver End Time</description>
        <formula>IF( 
AND(TEXT(Approver_Status__c) = &quot;Submitted&quot;, ISNULL(  Approver_End_Time__c  ), TEXT( Approver_Start_Time__c )  &lt;&gt; null ), 
FLOOR(NOW() -  Approver_Start_Time__c) , 
FLOOR(Approver_End_Time__c - Approver_Start_Time__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Request Age (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Start_Time__c</fullName>
        <description>SOM R15.10 CR10016 - Hidden field. Value populate by workflow</description>
        <label>Approver Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Status__c</fullName>
        <label>Approver Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Book_Date__c</fullName>
        <formula>Approval_Request__r.Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coordinator_Actions__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL(Approver_Status__c, &apos;Submitted&apos;),
ISPICKVAL(Approver_Status__c, &apos;Rejected&apos;),
ISPICKVAL(Approver_Status__c, &apos;Cancelled&apos;)
),
AND(
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Cancelled&apos;)),
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Approved&apos;)),
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Closed as Rejected&apos;))
)
), 
HYPERLINK(&apos;/apex/ApprovalRequestMaintenance?approverId=&apos; &amp; Id &amp; &apos;&amp;action=reassign&apos;, &apos;Reassign&apos;, &apos;_parent&apos;) &amp; &apos; &apos;,
&apos;&apos; 
) &amp; 
IF(
AND(
OR(
ISPICKVAL(Approver_Status__c, &apos;Submitted&apos;),
ISPICKVAL(Approver_Status__c, &apos;Rejected&apos;),
ISPICKVAL(Approver_Status__c, &apos;Cancelled&apos;)
),
AND(
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Cancelled&apos;)),
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Approved&apos;)),
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Closed as Rejected&apos;))
)
), 
HYPERLINK(&apos;/apex/ApprovalRequestMaintenance?approverId=&apos; &amp; Id &amp; &apos;&amp;action=resend&apos;, &apos;Resend&apos;, &apos;_parent&apos;) &amp; &apos; &apos;,
&apos;&apos; 
) &amp; 
IF(
AND(
OR(
ISPICKVAL(Approver_Status__c, &apos;Submitted&apos;),
ISPICKVAL(Approver_Status__c, &apos;Rejected&apos;)
),
AND(
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Cancelled&apos;)),
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Approved&apos;)),
NOT(ISPICKVAL( Approval_Request__r.Approval_Status__c , &apos;Closed as Rejected&apos;))
)
), 
HYPERLINK(&apos;/apex/ApprovalRequestMaintenance?approverId=&apos; &amp; Id &amp; &apos;&amp;action=recall&apos; , &apos;Cancel&apos;, &apos;_parent&apos;) &amp; &apos; &apos;,
&apos;&apos;
) &amp;
IF(
AND(
Approver__r.Id != $User.Id,
ISPICKVAL(Approver_Status__c, &apos;Submitted&apos;),
OR(
$User.Is_DGR_Product_Admin__c == True,
AND(
$User.Is_Services_Intake_Manager_DGC__c == True,
$User.Id == Approval_Request__r.Owner__r.Id 
)
)
),
HYPERLINK(&apos;/apex/ApprovalRequestApprove?approverId=&apos; &amp; Id &amp; &apos;&amp;fromLink=EmailApproval&apos;, &apos;Email Approval&apos;, &apos;_parent&apos;), 
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinator Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGR_Territories__c</fullName>
        <label>DGR Territories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Governance_Review_Level__c</fullName>
        <formula>Approval_Request__r.DGR_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Governance Review Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <formula>Approval_Request__r.Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dell_Defined_LOB__c</fullName>
        <formula>Approval_Request__r.Dell_Defined_LOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Services LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR 11705 - Story 170567:RTB DGR Create new field &quot;Email Approval&quot; Checkbox in the Approver Object</description>
        <inlineHelpText>By checking YES, I certify an email approval was received from this Approver, and that email is attached to this Approval Request.</inlineHelpText>
        <label>Email Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Delegate__c</fullName>
        <description>SOM R14.10 - populate with values when Services Governance Approval Request is submitted</description>
        <label>Is Delegate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Approval_Request__r.Opportunity__r.Id , Approval_Request__r.Opportunity__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_s_for_Rejection__c</fullName>
        <label>Reason(s) for Rejection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CONDITIONAL APPROVAL – Must Add Comments</fullName>
                </value>
                <value>
                    <fullName>Capital expense too high</fullName>
                </value>
                <value>
                    <fullName>Competitor better positioned to win</fullName>
                </value>
                <value>
                    <fullName>Customer decision process not visible</fullName>
                </value>
                <value>
                    <fullName>Customer relationship lacking</fullName>
                </value>
                <value>
                    <fullName>Customer requirements not visible</fullName>
                </value>
                <value>
                    <fullName>Delivery availability/capabilities gap</fullName>
                </value>
                <value>
                    <fullName>Incumbent better positioned to win</fullName>
                </value>
                <value>
                    <fullName>Margins below minimum</fullName>
                </value>
                <value>
                    <fullName>Market intelligence too limited</fullName>
                </value>
                <value>
                    <fullName>Offer availability/capabilities gap</fullName>
                </value>
                <value>
                    <fullName>Pursuit budget request too high</fullName>
                </value>
                <value>
                    <fullName>Pursuit Resources unavailable</fullName>
                </value>
                <value>
                    <fullName>Required information missing</fullName>
                </value>
                <value>
                    <fullName>Review time insufficient</fullName>
                </value>
                <value>
                    <fullName>SLAs too aggressive</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; conditions high risk</fullName>
                </value>
                <value>
                    <fullName>Too complex to solution within timeline</fullName>
                </value>
                <value>
                    <fullName>Transition costs prohibitive</fullName>
                </value>
                <value>
                    <fullName>Transition timeline too aggressive</fullName>
                </value>
                <value>
                    <fullName>Win probability too low</fullName>
                </value>
                <value>
                    <fullName>Win strategy ineffective</fullName>
                </value>
                <value>
                    <fullName>Other, see Justification/Action Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>Approval_Request__r.Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unweighted_Rev_Services_Only__c</fullName>
        <formula>Approval_Request__r.Opportunity__r.Unweighted_Rev_Services_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unweighted Rev – Services Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unweighted_Revenue__c</fullName>
        <formula>Approval_Request__r.Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unweighted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Approver</label>
    <listViews>
        <fullName>Services_Approval_Queue</fullName>
        <columns>Approver_Initiation_Date__c</columns>
        <columns>Actions_Available__c</columns>
        <columns>Deal_Governance_Review_Level__c</columns>
        <columns>Approval_Request_Type__c</columns>
        <columns>Approver__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Dell_Defined_LOB__c</columns>
        <columns>Deal_ID__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Services_Sales_Owner__c</columns>
        <columns>Product__c</columns>
        <columns>Unweighted_Revenue__c</columns>
        <columns>Unweighted_Rev_Services_Only__c</columns>
        <columns>Stage__c</columns>
        <columns>Book_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_View_Field__c</field>
            <operation>equals</operation>
            <value>To Approve</value>
        </filters>
        <label>Services Approval Queue</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Approver Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>